--- a/TEAM PROJECT/Project/MVCBlog/MVCBlog/MVCBlog/MVCBlog.csproj
+++ b/TEAM PROJECT/Project/MVCBlog/MVCBlog/MVCBlog/MVCBlog.csproj
@@ -199,6 +199,7 @@
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
+    <Compile Include="Controllers\PhotoalbumsController.cs" />
     <Compile Include="Controllers\PostsController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -208,6 +209,7 @@
     <Compile Include="Models\ApplicationUser.cs" />
     <Compile Include="Models\ApplicationDbContext.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
+    <Compile Include="Models\PhotoalbumsController.cs" />
     <Compile Include="Models\Post.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
@@ -286,6 +288,8 @@
     <Content Include="Views\Home\Ranking.cshtml" />
     <Content Include="Views\Home\Players.cshtml" />
     <Content Include="Views\Home\Preparation.cshtml" />
+    <Content Include="Views\Photoalbums\Create.cshtml" />
+    <Content Include="Views\Photoalbums\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
