--- a/TEAM PROJECT/Project/MVCBlog/MVCBlog/MVCBlog/MVCBlog.csproj
+++ b/TEAM PROJECT/Project/MVCBlog/MVCBlog/MVCBlog/MVCBlog.csproj
@@ -217,6 +217,7 @@
   <ItemGroup>
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\preparation.css" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
@@ -225,6 +226,10 @@
     <Content Include="Images\800px-Baron_Pierre_de_Coubertin.jpg" />
     <Content Include="Images\Athens_1896_report_cover.jpg" />
     <Content Include="Images\Olympic_Rings.svg.png" />
+    <Content Include="Images\Podgotovka 1.jpg" />
+    <Content Include="Images\Podgotovka 2.jpg" />
+    <Content Include="Images\Podgotovka 4.jpg" />
+    <Content Include="Images\Podgotovka 5.jpg" />
     <Content Include="Images\rio_2016_summer_olympics-HD-2.jpg" />
     <Content Include="Images\rio_2016_summer_olympics-HD.jpg" />
     <Content Include="Scripts\ai.0.15.0-build58334.js" />
